# therapy-normalization

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  alembic.ini  cli.py  main.py  profiler.py  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.ebextensions/: 01app.config
.github/workflows/: checks.yaml  github-actions.yml  release.yml
alembic/: env.py
alembic/versions/: 05a8e608b181_create_tables.py  11005a90d626_testing.py  f7c738dcd878_add_approval_status.py  f7c738dcd878_add_approval_status_and_remove_max_.py
analysis/: DGIdb.ipynb  Precision oncology coding systems.xlsx  approval_status_testing.ipynb  civic.ipynb  drugbank.ipynb  match_analysis.py  match_results.tsv  match_viz.ipynb  ncit.ipynb
analysis/approval_status/: Approval status brainstorming.ipynb  Approval status comparisons.ipynb  approval_status.json  approval_status_notes.md
analysis/dgidb/: DGIdb analysis.ipynb
analysis/sources/: drugsatfda.ipynb
codebuild/: deploy_eb_env.py  deploy_eb_env_dev.py  terminate_eb_env.py  terminate_eb_env_dev.py
data/: civic_drugs.tsv
dynamodb_revisions/: README.md  add_item_type.py  add_merge.py  add_xref_lookup.py  add_xrefs.py  delete_merged_records.py  other_id_ref.py  update_meta.py  update_xrefs_other_ids.py
src/therapy/: __init__.py  cli.py  config.py  database.py  log.py  main.py  query.py  schemas.py  utils.py  version.py
src/therapy/database/: __init__.py  database.py  dynamodb.py  postgresql.py
src/therapy/etl/: __init__.py  base.py  chembl.py  chemidplus.py  drugbank.py  drugsatfda.py  guidetopharmacology.py  hemonc.py  merge.py  ncit.py  rules.py  rxnorm.py  update.py  wikidata.py
tests/: conftest.py
tests/data/: disease_normalization.json  metadata.json  therapies.json
tests/data/chembl/: chembl_31.db  chembl_32.db  chembl_33.db
tests/data/chemidplus/: chemidplus_2022-10-21.xml  chemidplus_2023-02-22.xml
tests/data/drugbank/: drugbank_5.1.10.csv  drugbank_5.1.9.csv
tests/data/drugsatfda/: drugsatfda_2022-11-04.json  drugsatfda_2022-11-07.json  drugsatfda_2022-12-16.json  drugsatfda_2023-05-05.json  drugsatfda_2023-05-12.json  drugsatfda_2023-07-25.json  drugsatfda_2023-07-26.json  drugsatfda_2023-07-28.json  drugsatfda_2023-11-15.json
tests/data/fixtures/: chembl_fixtures.json  merged_fixtures.json  query_fixtures.json
tests/data/guidetopharmacology/: gtop_ligand_id_mapping_2023.2.tsv  gtop_ligand_id_mapping_2024.3.tsv  gtop_ligands_2024.3.tsv  guidetopharmacology_ligand_id_mapping_2021.4.tsv  guidetopharmacology_ligand_id_mapping_2022.3.tsv  guidetopharmacology_ligand_id_mapping_2022.4.tsv  guidetopharmacology_ligand_id_mapping_2023.1.tsv  guidetopharmacology_ligands_2021.4.tsv  guidetopharmacology_ligands_2022.3.tsv  guidetopharmacology_ligands_2022.4.tsv  guidetopharmacology_ligands_2023.1.tsv  guidetopharmacology_ligands_2023.2.tsv
tests/data/hemonc/: hemonc_concepts_2022-08-21.csv  hemonc_concepts_2022-12-28.csv  hemonc_concepts_2023-06-11.csv  hemonc_concepts_2023-09-07.csv  hemonc_concepts_2023-12-17.csv  hemonc_concepts_2024-03-01.csv  hemonc_concepts_2025-01-09.csv  hemonc_rels_2022-08-21.csv  hemonc_rels_2022-12-28.csv  hemonc_rels_2023-06-11.csv  hemonc_rels_2023-09-07.csv  hemonc_rels_2023-12-17.csv  hemonc_rels_2024-03-01.csv  hemonc_rels_2025-01-09.csv  hemonc_synonyms_2022-08-21.csv  hemonc_synonyms_2023-06-11.csv  hemonc_synonyms_2023-09-07.csv  hemonc_synonyms_2024-03-01.csv  hemonc_synonyms_2025-01-09.csv
tests/data/ncit/: ncit_22.09d.owl  ncit_22.11d.owl  ncit_23.03d.owl  ncit_23.06d.owl  ncit_23.09d.owl
tests/data/rxnorm/: rxnorm_2022-11-07.RRF  rxnorm_2022-12-05.RRF  rxnorm_2023-11-06.RRF  rxnorm_drug_forms_2022-11-07.yaml  rxnorm_drug_forms_2023-07-03.yaml
tests/data/wikidata/: wikidata_2022-11-04.json  wikidata_2022-11-07.json  wikidata_2022-12-14.json  wikidata_2022-12-16.json  wikidata_2023-05-12.json  wikidata_2023-07-25.json  wikidata_2023-07-26.json  wikidata_2023-07-28.json  wikidata_2023-11-15.json  wikidata_2023-11-17.json
tests/scripts/: README.md  build_chembl_data.py  build_chemidplus_data.py  build_disease_normalizer_data.py  build_drugbank_data.py  build_drugsatfda_data.py  build_gtop_data.py  build_hemonc_data.py  build_ncit_data.py  build_rxnorm_data.py  build_wikidata_data.py  dump_unmerged_data.py  dynamodb_build.bash  dynamodb_run.sh
tests/unit/: dynamodb_build.bash  load_test_data.py  mock_database.py  test_api.py  test_build_normalize.py  test_chembl.py  test_chembl_normalizer.py  test_chembl_source.py  test_chemidplus.py  test_chemidplus_source.py  test_database.py  test_disease_indication.py  test_drugbank.py  test_drugbank_source.py  test_drugsatfda.py  test_emit_warnings.py  test_guidetopharmacology.py  test_hemonc.py  test_hemonc_source.py  test_merge.py  test_ncit.py  test_ncit_source.py  test_normalizer.py  test_query.py  test_rxnorm.py  test_rxnorm_source.py  test_schemas.py  test_therapy_query.py  test_utils.py  test_wikidata.py  test_wikidata_normalizer.py  test_wikidata_source.py
tests/unit/data/: chembl_27_test.db  metadata.json  query_cisplatin.json  query_phenobarbital.json  query_spiramycin.json  query_therapeutic_procedure.json  test_chembl_data.json  test_merge_data.json  test_query_data.json  test_therapy.db  therapies.json  wd_00000000.json  wikidata_test_ver.json
therapy/: __init__.py  analysis.py  cli.py  database.py  etl.py  main.py  models.py  normalizer.py  normalizers.py  query.py  schemas.py  version.py
therapy-normalizer/: __init__.py  models.py
therapy/database/: __init__.py  database.py  dynamodb.py  postgresql.py
therapy/etl/: __init__.py  base.py  chembl.py  chemidplus.py  drugbank.py  drugsatfda.py  exceptions.py  guidetopharmacology.py  hemonc.py  manual_override.csv  merge.py  ncit.py  normalize.py  rules.csv  rules.py  rxnorm.py  rxnorm_download.sh  wikidata.py
therapy/normalizers/: __init__.py  base.py  chembl.py  wikidata.py
(+15 files in other folders)
