[metadata]
name = thera-py
description = VICC normalization routine for therapies
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cancervariants/therapy-normalization
author = VICC
author_email = help@cancervariants.org
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

install_requires =
    pydantic >=1.8.2
    fastapi >= 0.92.0
    click
    uvicorn
    boto3
    ga4gh.vrsatile.pydantic ~= 0.0.11


[options.package_data]
therapy =
    etl/*

[options.extras_require]
test =
    pytest
    pytest-cov

etl =
    disease-normalizer ~= 0.2.19
    owlready2
    rdflib
    wikibaseintegrator >= 0.12.0
    chembl-downloader
    bioversions >= 0.4.3
    lxml

dev =
    pre-commit
    xmlformatter
    black
    ruff
    mypy
    types-requests
    types-pyyaml

[tool:pytest]
addopts = --ignore setup.py --ignore=analysis/ --cov-report term-missing --cov=therapy

[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True

[coverage:run]
source =
   therapy/
   tests/
omit =
   setup.py
   docs/*
