[metadata]
name = thera-py
description = VICC normalization routine for therapies
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cancervariants/therapy-normalization
author = VICC
author_email = help@cancervariants.org
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

install_requires =
    pydantic ==2.*
    fastapi >= 0.92.0
    click
    uvicorn
    boto3
    ga4gh.vrs ~= 2.0.0a1

[options.package_data]
therapy =
    etl/*

[options.extras_require]
test =
    pytest
    pytest-cov

dev =
    disease-normalizer ~= 0.4.0.dev0
    owlready2
    rdflib
    wikibaseintegrator >= 0.12.0
    chembl-downloader
    bioversions >= 0.4.3
    ipykernel
    ipython >= 8.10
    pre-commit
    tox
    mypy
    types-requests
    types-pyyaml
    lxml
    xmlformatter
    ruff >= 0.1.2

[tool:pytest]
addopts = --ignore setup.py --ignore=analysis/ --cov-report term-missing --cov=therapy

[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True

[coverage:run]
source =
   therapy/
   tests/
omit =
   setup.py
   docs/*
